mType/tests/testFiles/error/error/semanticWrongParameterCount.mt
function add(int a, int b): int {
    return a + b;
}
int result = add(10);